--- a/example.html
+++ b/example.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example Vega</title>
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.30.0/build/vega.min.js" integrity="sha256-5DLHUaY2P0ph2mKSDMfX69E88J2ClJ+PSGJI+Acdw84=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.21.0/build/vega-lite.min.js" integrity="sha256-zTIxSx5259h53J8FNLYr5xTfA1VEhsfKI4Gr/QqS0vQ=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.26.0/build/vega-embed.min.js" integrity="sha256-BywFTypjEHJeA4w4px4ABScF4xg1YyRiyXF6I6OE6JU=" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>This is my website</h1>
