updated example file

--- a/example.html
+++ b/example.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <h1>This is my website</h1>
-<div>
+<div id>
     <ol>
         <li>First</li>
         <li>Second</li>
         <li>Third</li>
     </ol>
+</div>
+<div id="viz">
 </div>
 <script>
     vegaEmbed("#viz", "myspec.json");
